--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -30,7 +30,10 @@
           "react-router": "/react-router-dom.js",
           "react-router-config": "/react-router-config.js",
           "moment": "/moment-with-locales.js",
-          "antd": "/antd.js"
+          "antd": "/antd.js",
+          "@micro/portal": "/index.js",
+          "@micro/app-web": "http://localhost:9011/index.js",
+          "@micro/devops-web": "http://localhost:9012/index.js"
         }
       }
     </script>
@@ -42,35 +45,10 @@
 
   <body>
     <div id="root"></div>
-
-    <script type="systemjs-importmap">
-      {
-        "imports": {
-          "@micro/portal": "/index.js"
-        }
-      }
-    </script>
-    <!-- <script type="systemjs-module" src="import:@micro/portal"></script> -->
-
-    <script type="systemjs-importmap">
-      {
-        "imports": {
-          "@micro/app-web": "http://localhost:9011/index.js"
-        }
-      }
-    </script>
-    <script type="systemjs-module" src="import:@micro/app-web"></script>
-
-    <script type="systemjs-importmap">
-      {
-        "imports": {
-          "@micro/devops-web": "http://localhost:9012/index.js"
-        }
-      }
-    </script>
-    <script type="systemjs-module" src="import:@micro/devops-web"></script>
     <script>
       System.import('@micro/portal').then(({ render }) => render());
+      System.import('@micro/app-web').then(({ render }) => render());
+      System.import('@micro/devops-web').then(({ render }) => render());
     </script>
     <!-- <script>
       System.import('@micro/portal');
