--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -48,6 +48,8 @@
     <script src="http://localhost:9011/index.js"></script>
     <script src="http://localhost:9012/index.js"></script>
     <script>
+      window['@micro/app-web'].render();
+      window['@micro/devops-web'].render();
       window['@micro/portal'].render();
     </script>
   </body>
