--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -21,7 +21,7 @@
         }
       }
     </script> -->
-    <script src="/react.development.js"></script>
+    <!-- <script src="/react.development.js"></script>
     <script src="/react-dom.development.js"></script>
     <script src="/react-router-dom.js"></script>
 
@@ -30,7 +30,7 @@
     </script>
     <script src="/react-router-config.js"></script>
     <script src="/moment-with-locales.js"></script>
-    <script src="/antd.js"></script>
+    <script src="/antd.js"></script> -->
     <!-- <script>
       const process = { env: { NODE_ENV: 'development' } };
     </script>
@@ -45,11 +45,11 @@
   <body>
     <div id="root"></div>
     <script src="/index.js"></script>
-    <script src="http://localhost:9011/index.js"></script>
-    <script src="http://localhost:9012/index.js"></script>
+    <!-- <script src="http://localhost:9011/index.js"></script>
+    <script src="http://localhost:9012/index.js"></script> -->
     <script>
-      window['@micro/app-web'].render();
-      window['@micro/devops-web'].render();
+      // window['@micro/app-web'].render();
+      // window['@micro/devops-web'].render();
       window['@micro/portal'].render();
     </script>
   </body>
