feat: 动态加载共享组件

--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -45,11 +45,11 @@
   <body>
     <div id="root"></div>
     <script src="/index.js"></script>
-    <script src="http://localhost:9011/index.js"></script>
-    <script src="http://localhost:9012/index.js"></script>
+    <!-- <script src="http://localhost:9011/index.js"></script>
+    <script src="http://localhost:9012/index.js"></script> -->
     <script>
-      window['@micro/app-web'].render();
-      window['@micro/devops-web'].render();
+      // window['@micro/app-web'].render();
+      // window['@micro/devops-web'].render();
       window['@micro/portal'].render();
     </script>
   </body>
